  * merge fix from Steven Chamberlain <steven@pyro.eu.org> for
    crash in unattended-upgrades, many many thanks (closes: #596408)
  * python/acquire-item.cc:
    - fix two more int -> long long change to follow the changes
      from libapt
    - do use PyString_FromFormat(), in python versions below 2.7 it
      does not support long long (%llu), use strprintf() from libapt
      instead

  [ Kiwinote ]
  * apt/debfile:
    - don't fail if we conflict with the pkgs we are reinstalling

 -- Michael Vogt <mvo@debian.org>  Tue, 28 Sep 2010 15:47:51 +0200

python-apt (0.7.97.1) unstable; urgency=low

  * tests/test_apt_cache.py:
    - Do not insert ".." into sys.path, fixes FTBFS

 -- Julian Andres Klode <jak@debian.org>  Thu, 26 Aug 2010 14:08:01 +0200

python-apt (0.7.97) unstable; urgency=low

  [ Julian Andres Klode ]
  * python/tag.cc:
    - Support gzip compression for control files (Closes: #383617),
      requires APT (>> 0.7.26~exp10) to work.
  * doc/conf.py:
    - Correctly handle non-digit characters in version (ignore everything
      after them).
  * python/apt_pkgmodule.cc:
    - Bind pkgAcquire::Item::StatTransientNetworkError (Closes: #589010)
  * doc/library/apt_pkg.rst:
    - Document Configuration.dump().
  * debian/control:
    - Adapt to new Python 3 handling (Closes: #593042)
    - Build-depend on APT >= 0.8 to get gzip compression enabled (optional,
      can be reverted for backports)
    - Set Standards-Version to 3.9.1
  
  [ Michael Vogt ]
  * python/configuration.cc:
    - add binding for the "dump()" method to configruation objects
  * apt/debfile.py:
    - fix crash in DscFile handling and add regression test
  * po/pt_BR.po:
    - updated, thanks to Sergio Cipolla (Closes: #593754)

 -- Julian Andres Klode <jak@debian.org>  Thu, 26 Aug 2010 12:32:54 +0200

python-apt (0.7.96.1) unstable; urgency=low

  * tests/test_debfile.py:
   - properly setup fixture data to make debfile test pass 
     (closes: #588796)
